update to all css to stop flickering

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
 * {
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
   margin: 0;
   padding: 0;
   font-family: "PT Sans", sans-serif;
   overscroll-behavior: none;
 }
 html {
-  scroll-behavior: smooth;
+  /*scroll-behavior: smooth;*/
 }
 
-.home,
 .about,
 .pricing,
 .contact-us,
