--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -4,6 +4,10 @@
   padding: 0;
   justify-content: center;
   align-items: center;
+  position: relative;
+  overflow: hidden;
+  list-style: none;
+  z-index: 1;
 }
 
 .swiper-slide {
@@ -11,6 +15,7 @@
   background-size: cover;
   width: 300px;
   height: 300px;
+  background-color: transparent;
 }
 
 .swiper-slide img {
@@ -33,4 +38,7 @@
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
+}
+div {
+  display: block;
 }
